--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ code {
   right: 0;
   z-index: 1;
 }
-@keyframes animation1 {
+/* @keyframes animation1 {
   0% {
       position: relative;
       left: 0;
@@ -100,7 +100,7 @@ code {
   animation-iteration-count: infinite;
   animation-timing-function: linear;
   animation-delay: 3s;
-}
+} */
 .home-content {
   position: relative;
   top: 40vh;
